--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,36 @@
-language: php
+# list any PHP version you want to test against
 php:
-  - 7.1.9
-before_script: phpenv config-add myconfig.ini
-    
+  # using major version aliases
 
-script:
-    - vendor/bin/phpunit --coverage-clover=coverage.xml
+  # aliased to 5.2.17
+  - 5.2
+  # aliased to 5.3.29
+  - 5.3
+  # aliased to a recent 5.4.x version
+  - 5.4
+  # aliased to a recent 5.5.x version
+  - 5.5
+  # aliased to a recent 5.6.x version
+  - 5.6
+  # aliased to a recent 7.x version
+  - 7.0
+  # aliased to a recent hhvm version
+  - hhvm
 
-after_success:
-    - bash <(curl -s https://codecov.io/bash)
+# optionally specify a list of environments, for example to test different RDBMS
+env:
+  - DB=mysql
+
+# optionally set up exclutions and allowed failures in the matri
+# execute any number of scripts before the test run, custom env's are available as variables
+before_script:
+ 
+  - if [[ "$DB" == "mysql" ]]; then mysql -e "create database IF NOT EXISTS tugasbesar;" -uroot; fi
+
+# omitting "script:" will default to phpunit
+# use the $DB env variable to determine the phpunit.xml to use
+script: phpunit --configuration phpunit_$DB.xml --coverage-text
+
+# configure notifications (email, IRC, campfire etc)
+notifications:
+  irc: "irc.freenode.org#yourfavouriteroomfortravis"
