--- a/.travis.yml
+++ b/.travis.yml
@@ -1,36 +1,13 @@
-# list any PHP version you want to test against
+language: php
 php:
-  # using major version aliases
-
-  # aliased to 5.2.17
-  - 5.2
-  # aliased to 5.3.29
-  - 5.3
-  # aliased to a recent 5.4.x version
-  - 5.4
-  # aliased to a recent 5.5.x version
-  - 5.5
-  # aliased to a recent 5.6.x version
-  - 5.6
-  # aliased to a recent 7.x version
-  - 7.0
-  # aliased to a recent hhvm version
-  - hhvm
-
-# optionally specify a list of environments, for example to test different RDBMS
-env:
-  - DB=mysql
-
-# optionally set up exclutions and allowed failures in the matri
-# execute any number of scripts before the test run, custom env's are available as variables
-before_script:
- 
-  - if [[ "$DB" == "mysql" ]]; then mysql -e "create database IF NOT EXISTS tugasbesar;" -uroot; fi
-
-# omitting "script:" will default to phpunit
-# use the $DB env variable to determine the phpunit.xml to use
-script: phpunit --configuration phpunit_$DB.xml --coverage-text
-
-# configure notifications (email, IRC, campfire etc)
-notifications:
-  irc: "irc.freenode.org#yourfavouriteroomfortravis"
+  - '5.5'
+  - '5.6'
+service:
+  - mysql
+install:
+  - composer install
+before_install:
+  - mysql -e 'CREATE DATABASE IF NOT EXISTS travis;'  
+  - mysql -u root --default-character-set=utf8 travis < scripts/bd.sql
+script:
+  - vendor/bin/phpunit
